--- a/geo-data-avg/pom.xml
+++ b/geo-data-avg/pom.xml
@@ -12,30 +12,50 @@
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
     
+   
+    
     <build>
         <plugins>
-        
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
                     <execution>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <transformers>
-                                <transformer implementation=
-                                  "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.xplg.geo.data.avg.main</mainClass>
-                            </transformer>
-                        </transformers>
-                    </configuration>
+                      <phase>package</phase>
+                      <goals>
+                        <goal>single</goal>
+                      </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <descriptorRefs>
+                      <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                    <manifest>
+                      <mainClass>com.assaf.xplg.geotask.main</mainClass>
+                    </manifest>
+                  </archive>
+                  
+                </configuration>
+                
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <!-- Provided by xplg -->
+        <dependency>
+            <groupId>com.xplg</groupId>
+            <artifactId>xpl-geodata</artifactId>
+            <version>1.0</version>
+        </dependency>
+        
+
+        <dependency>
+            <groupId>com.mapbox.mapboxsdk</groupId>
+            <artifactId>mapbox-java-geojson</artifactId>
+            <version>2.2.10</version>
+        </dependency>
+
+
+    </dependencies>
 </project>
